--- a/frontPetLove-master/package.json
+++ b/frontPetLove-master/package.json
@@ -14,7 +14,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
-    "reactstrap": "^8.10.0"
+    "reactstrap": "^8.10.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "8.0.0",
